// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild > generate mode 1`] = `
[
  "// <stdout>
// tests/fixtures/main.ts
function hello(s) {
  return "hello" + s;
}
var num = 1;
export {
  hello,
  num
};
",
  "// main.d.ts
import { type Num } from "./types";
export type Str = string;
export declare function hello(s: Str): Str;
export declare let num: Num;
",
  "// types.d.ts
export type Num = number;
",
]
`;

exports[`esbuild > write mode 1`] = `
[
  "import { type Num } from "./types";
export type Str = string;
export declare function hello(s: Str): Str;
export declare let num: Num;
",
  "// tests/fixtures/main.ts
function hello(s) {
  return "hello" + s;
}
var num = 1;
export {
  hello,
  num
};
",
  "export type Num = number;
",
]
`;
